# buckyball

./: .gitmodules  flake.nix
.buckyball-rules/: 00-orchestration.md  01-hw-interface.md  03-ball-registration.md  04-ball-author-output.md  05-ball-registrar-output.md  06-verify-checklist.md  07-vscode-copilot-runbook.md
.github/: copilot-instructions.md
.github/agents/: buckyball-author.agent.md  buckyball-conductor.agent.md  buckyball-ctest.agent.md  buckyball-debug-optimize.agent.md  buckyball-registrar.agent.md  buckyball-researcher.agent.md  buckyball-test-runtime.agent.md
.github/hooks/: buckyball-guardrails.json
.github/instructions/: buckyball-workflow.instructions.md
.github/promote/: BALL_HANDOFF_V1.template.json  BALL_REGISTRATION_RESULT_V1.template.json  BUCKYBALL_CONDUCTOR_IM2COL_E2E_V1.prompt.md  BUCKYBALL_CONDUCTOR_IM2COL_E2E_V2.prompt.md  BUCKYBALL_MCP_RUNTIME_EXECUTE_V1.prompt.md  DEBUG_OPTIMIZE_HANDOFF_V1.template.json  DEBUG_OPTIMIZE_RESULT_V1.template.json  README.md  contracts.meta.json
.github/skills/buckyball-ball-author-from-rules/: SKILL.md
.github/skills/buckyball-ball-registrar-from-rules/: SKILL.md
.github/skills/buckyball-ball-registration-extraction/: SKILL.md
.github/skills/buckyball-ctest-author-from-rules/: SKILL.md
.github/skills/buckyball-debug-optimize-loop/: SKILL.md
scripts/buckyball-mcp/: README.md  pyproject.toml
scripts/buckyball-mcp/src/buckyball_mcp/: __main__.py  server.py
scripts/hooks/: posttool_validate.py  pretool_guard.py
scripts/nix/: build-env-tools.nix
workload-lab/: 03_compiler_md_算子扫描报告.md
(+9 files in other folders)
